[package]
name = "contract"
version = "0.1.0"
edition = "2021"
 
[lib]
crate-type = ["cdylib"]
 
[dependencies]
cosmwasm-std = { version = "2.1.4", features = ["staking"] }
serde = { version = "1.0.214", default-features = false, features = ["derive"] } 
cw-storey = "0.4.0"
cw-storage-plus = "2.0.0"
thiserror = "2.0.3"
cw-utils = "2.0.0"

[dev-dependencies]
cw-multi-test = "2.2.0"

[features]
default = []
library = []